--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/checkout@v6
         with:
           token: ${{ secrets.RELEASE_TOKEN }}
+          fetch-depth: 0
 
       - name: Bump version
         id: bump_version
@@ -83,29 +84,17 @@ jobs:
           git add gradle/libs.versions.toml ios-app/alkaa.xcodeproj/project.pbxproj
           git commit -m "Bump version to ${{ steps.bump_version.outputs.new_version_name }}"
           git pull --rebase origin main
-          git push
+
+          NEW_TAG="v${{ steps.bump_version.outputs.new_version_name }}"
+          git tag $NEW_TAG
+          git push origin main --tags
+
           echo "new_sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-
-  create-tag:
-    runs-on: ubuntu-latest
-    needs: calculate-version
-
-    steps:
-      - name: Create tag
-        uses: actions/github-script@v8
-        with:
-          script: |
-            github.rest.git.createRef({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              ref: 'refs/tags/v${{ needs.calculate-version.outputs.new_version_name }}',
-              sha: '${{ needs.calculate-version.outputs.new_sha }}'
-            })
 
   github-release:
     name: "Release on GitHub"
     runs-on: "ubuntu-latest"
-    needs: [calculate-version, create-tag]
+    needs: calculate-version
 
     steps:
       - name: Checkout
@@ -135,7 +124,7 @@ jobs:
   google-play-release:
     name: "Release on Google Play"
     runs-on: "ubuntu-latest"
-    needs: [calculate-version, create-tag]
+    needs: calculate-version
 
     steps:
       - name: Checkout
