--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -35,9 +35,9 @@ lifecycle_runtime = "2.10.0"
 # Compose
 compose_bom = "2025.12.01"
 compose_activity = "1.12.2"
-compose_compiler = "1.9.3"
+compose_compiler = "1.10.0-rc02"
 compose_navigation = "1.0.0-alpha06"
-compose_adaptive = "1.3.0-alpha01"
+compose_adaptive = "1.3.0-alpha03"
 
 # Koin
 koin = "4.1.1"
