🍫 Fix detekt in the `data:local` module
New detekt 2.0 rules applied in the module.

--- a/config/filters/detekt.yml
+++ b/config/filters/detekt.yml
@@ -32,3 +32,7 @@ naming:
   FunctionNaming:
     ignoreAnnotated: [ 'Composable' ]
     excludes: [ '**/test/**','**/androidTest/**','**/android-test/**', '**/androidUnitTest/**', '**/commonTest/**', '**/generated/**' ]
+
+exceptions:
+  NotImplementedDeclaration:
+    excludes: [ '**/*Fake.kt' ]
