🍫 Fix detekt in the `libraries:designsystem` module
New detekt 2.0 rules applied in the module.

--- a/config/filters/detekt.yml
+++ b/config/filters/detekt.yml
@@ -16,6 +16,8 @@ comments:
 style:
   MagicNumber:
     active: false
+  UnusedPrivateFunction:
+    ignoreAnnotated: [ 'Composable' ]
 
 complexity:
   LongMethod:
