🔧 Generalize test report artifact paths in CI
Updated the GitHub Actions workflow to use a glob pattern for locating
test results. This replaces the hardcoded path, ensuring that reports
from all modules are correctly captured and uploaded as artifacts.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           name: test-results-android
           path: |
-            ${{ github.workspace }}/app/build/reports/tests/
+            **/build/reports/tests/
             ./logcat.txt
           retention-days: 7
 
@@ -68,7 +68,7 @@ jobs:
         with:
           name: test-results-ios
           path: |
-            ${{ github.workspace }}/app/build/reports/tests/
+            **/build/reports/tests/
           retention-days: 7
 
   desktop-test:
@@ -98,5 +98,5 @@ jobs:
         with:
           name: test-results-desktop
           path: |
-            ${{ github.workspace }}/app/build/reports/tests/
+            **/build/reports/tests/
           retention-days: 7
