🇫🇷 Add support for French
Strings translated to French and support added in the iOS app.

--- a/ios-app/alkaa/Info.plist
+++ b/ios-app/alkaa/Info.plist
@@ -8,6 +8,7 @@
 	<array>
 		<string>en-US</string>
 		<string>pt-BR</string>
+		<string>fr</string>
 	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key><true/>
 </dict>
