--- a/ios-app/alkaa/Info.plist
+++ b/ios-app/alkaa/Info.plist
@@ -9,6 +9,7 @@
 		<string>en-US</string>
 		<string>pt-BR</string>
 		<string>fr</string>
+		<string>es</string>
 	</array>
 	<key>CADisableMinimumFrameDurationOnPhone</key><true/>
 </dict>
