--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,8 @@ org.gradle.jvmargs=-Xmx6144m
 org.gradle.parallel=true
 kotlin.jvm.target.validation.mode=IGNORE
 org.gradle.configuration-cache=true
+org.gradle.caching=true
+kotlin.native.cacheKind=static
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
