--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,16 @@
 [versions]
 # Project
+#noinspection UnusedVersionCatalogEntry
 version_code = "30305"
+#noinspection UnusedVersionCatalogEntry
 version_name = "3.3.5"
 android_gradle_plugin = "8.13.2"
 kotlin = "2.3.0"
+#noinspection UnusedVersionCatalogEntry
 android_sdk_compile = "36"
+#noinspection UnusedVersionCatalogEntry
 android_sdk_target = "35"
+#noinspection UnusedVersionCatalogEntry
 android_sdk_min = "24"
 
 # General dependencies
@@ -144,10 +149,11 @@ test-work = { module = "androidx.work:work-testing", version.ref = "test_work" }
 test-robolectric = { module = "org.robolectric:robolectric", version.ref = "test_robolectric" }
 
 # Quality
+#noinspection UnusedVersionCatalogEntry
 ktlint = { module = "com.pinterest.ktlint:ktlint-cli", version.ref = "ktlint" }
 detekt = { module = "dev.detekt:detekt-gradle-plugin", version.ref = "detekt" }
+#noinspection UnusedVersionCatalogEntry
 composerules-detekt = { module = "io.nlopez.compose.rules:detekt", version.ref = "composerules" }
-composerules-ktlint = { module = "io.nlopez.compose.rules:ktlint", version.ref = "composerules" }
 
 # License
 aboutlibraries_plugin = { module = "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin", version.ref = "aboutlibraries" }
