🏃‍♀️ Use macos-latest runner in CI workflows
Updated the `ios-test` and `build-desktop` jobs to use `macos-latest`
instead of the unavailable `macos-15` runner. This ensures the workflows
 can execute successfully on a supported macOS environment.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
         run: xcodebuild -workspace ios-app/alkaa.xcodeproj/project.xcworkspace -configuration Debug -scheme alkaa -sdk iphonesimulator COMPILER_INDEX_STORE_ENABLE=NO
 
   build-desktop:
-    runs-on: macos-15
+    runs-on: macos-latest
 
     steps:
       - name: Checkout
