--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,8 @@ on:
 
 permissions:
   contents: write
+  id-token: write
+  discussions: write
 
 env:
   ALKAA_KEY_ALIAS: ${{ secrets.ALKAA_KEY_ALIAS }}
