🎨 Disable `UnnecessaryFullyQualifiedName` Detekt rule
Rule disabled since it's warning false positives with Pascal Case

https://github.com/detekt/detekt/issues/9018

--- a/config/filters/detekt.yml
+++ b/config/filters/detekt.yml
@@ -18,6 +18,8 @@ style:
     active: false
   UnusedPrivateFunction:
     ignoreAnnotated: [ 'Composable' ]
+  UnnecessaryFullyQualifiedName:
+    active: false
 
 complexity:
   LongMethod:
